Improve buttons, fix calculate bug

--- a/css/index.css
+++ b/css/index.css
@@ -1,92 +1,122 @@
 @import url(http://fonts.googleapis.com/css?family=Oswald:700|Orbitron);
 
-body {
-  background: #71B66F;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 20px;
-  width: 100%;
+body
+{
+    box-sizing: border-box;
+    width: 100%;
+    margin: 0;
+    padding: 20px;
+
+    background: #71b66f;
 }
 
-#calculator {
-  background: #2B3D50;
-  border-radius: 20px;
-  padding: 15px;
-  width: 335px;
-  margin-left: auto;
-  margin-right: auto;
+#calculator
+{
+    width: 335px;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 15px;
+
+    border-radius: 20px;
+    background: #2b3d50;
 }
 
-#screen-container {
-  background: #5E626D;
-  border-radius: 10px;
-  padding: 20px;
+#screen-container
+{
+    padding: 20px;
+
+    border-radius: 10px;
+    background: #5e626d;
 }
 
-#screen {
-  background: #EF5D5D;
-  border: none;
-  font-family: 'Orbitron', sans-serif;
-  font-size: 1.4em;
-  font-weight: 600;
-  height: 23px;
-  overflow: hidden;
-  padding: 12px 15px;
-  width: 265px;
-  z-index: 1;
+#screen
+{
+    font-family: 'Orbitron', sans-serif;
+    font-size: 1.4em;
+    font-weight: 600;
+
+    z-index: 1;
+
+    overflow: hidden;
+
+    width: 265px;
+    height: 23px;
+    padding: 12px 15px;
+
+    border: none;
+    background: #ef5d5d;
 }
 
-#zero {
-  width: 225px;
+#zero
+{
+    width: 225px;
 }
 
-#clear {
-  background: #CF7C43;
-  width: 147px;
+#clear
+{
+    width: 147px;
+
+    background: #cf7c43;
 }
 
-#clear:active {
-  background-color: #E67E22;
+#clear:active
+{
+    background-color: #e67e22;
 }
 
-#equals {
-  height: 89px;
+#equals
+{
+    height: 89px;
 }
 
-#buttons-container {
-  padding: 30px 0 0 15px;
+#buttons-container
+{
+    padding: 30px 0 0 15px;
 }
 
-.l-row {
-  position: absolute;
-  top: 354px;
+.l-row
+{
+    position: absolute;
+    top: 354px;
 }
 
-.buttons {
-  overflow: hidden;
+.buttons
+{
+    overflow: hidden;
 }
 
-.buttons span {
-  background: #3383D2;
-  border-radius: 3px;
-  border: none;
-  box-shadow: inset 0px 1px 0px #5E626D, 0px 5px 0px 0px #45637F;
-  cursor: pointer;
-  float: left;
-  font-family: 'Oswald', sans-serif;
-  width: 70px;
-  height: 40px;
-  margin: 0 7px 11px 0;
-  line-height: 40px;
-  text-align: center;
+.buttons span
+{
+    font-family: 'Oswald', sans-serif;
+    line-height: 40px;
+
+    float: left;
+
+    width: 70px;
+    height: 40px;
+    margin: 0 7px 11px 0;
+
+    cursor: pointer;
+    user-select: none;
+    text-align: center;
+
+    border: none;
+    border-radius: 3px;
+    background: #3383d2;
+    box-shadow: inset 0 1px 0 #5e626d, 0 5px 0 0 #45637f;
 }
 
-.buttons span:active {
-  background-color: #4AA3DF;
-  top: 3px;
-  box-shadow: inset 0px 1px 0px #5E626D, 0px 2px 0px 0px #45637F;
+.buttons span:active
+{
+    top: 3px;
+
+    transform: translateY(3px);
+
+    background-color: #4aa3df;
+    box-shadow: inset 0 1px 0 #5e626d, 0 2px 0 0 #45637f;
 }
 
-.operator {
-  font-size: 1.3em;
+.operator
+{
+    font-size: 1.3em;
 }
