--- a/css/index.css
+++ b/css/index.css
@@ -57,11 +57,13 @@ body
     width: 147px;
 
     background: #cf7c43;
+    box-shadow: inset 0 1px 0 #6a625c, 0 5px 0 0 #936f55;
 }
 
 #clear:active
 {
     background-color: #e67e22;
+    box-shadow: inset 0 1px 0 #6a625c, 0 2px 0 0 #936f55;
 }
 
 #equals
